[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchplate"
version = "0.0.7"
authors = [
  { name="Rohan Sikand", email="rsikand29@gmail.com" },
]
description = "A minimal and simple machine learning experiment module for PyTorch."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rosikand/torchplate"